# goit-pythonweb-hw

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: formatted-ci.yml
goit-pythonweb-hw-01/: part_1.py  part_2.py
goit-pythonweb-hw-02/: Dockerfile_hmw_2  docker-compose_hmw_2.yaml  requirements.txt
goit-pythonweb-hw-02/conf/: db.py
goit-pythonweb-hw-03/: error.html  index.html  main.py  message.html  read.html
goit-pythonweb-hw-03/storage/: data.json
storage/: data.json
