[project]
name = "hmw-web-development"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir",email = "107486166+VladimirDegt@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
